[package]
name = "invidious"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12.2"
reqwest = "0.10.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"

[dev-dependencies]
tokio = { version = "0.2.18", features = ["full"] }
